simplify default props for flex; fix alignment defect; simplify cookbook examples

--- a/packages/fds-components/src/style/layout/flex.css
+++ b/packages/fds-components/src/style/layout/flex.css
@@ -30,10 +30,6 @@
 }
 
 /* parent justify */
-.flex--justifyStart {
-  justify-content: flex-start;
-}
-
 .flex--justifyEnd {
   justify-content: flex-end;
 }
